# LTSS-Final-Project

./: CMakeLists.txt  PlanAndWorkDistribution.md  Report_FinalProject.ipynb  TranningModel.cc  cpu_main.cc  gpu_main.cc  gpu_main.cu  readme.md
data/mnist/: desktop.ini
src/: CMakeLists.txt  layer.h  network.cc  network.h
src/cpu/: Timer.h
src/gpu/: GpuModel.cu  GpuModel.h  Gpu_forward.cu  Gpu_forward.h  Timer.cu  Timer.h  gpuConv.cc  gpuConv.h  gpuConv_v2.cc  gpuConv_v2.h  gpuConv_v3.cc  gpuConv_v3.h
src/layer/: conv.cc  conv.h
