cmake_minimum_required (VERSION 3.0)
project (Lenet-5 LANGUAGES CUDA CXX)
include_directories ("${PROJECT_SOURCE_DIR}/third-party/eigen")
aux_source_directory(. DIR_SRCS)
add_subdirectory(src)
add_executable(TranningModel TranningModel.cc)
target_link_libraries(TranningModel MiniDNNLib)
add_executable(cpu_main cpu_main.cc)
target_link_libraries(cpu_main MiniDNNLib)
add_library(gpu_lib STATIC src/gpu/Timer.h src/gpu/Timer.cu)
add_executable(gpu_main gpu_main.cu)
target_link_libraries(gpu_main MiniDNNLib gpu_lib)
