cmake_minimum_required (VERSION 3.5)
project (Lenet-5 LANGUAGES CUDA CXX)
include_directories ("${PROJECT_SOURCE_DIR}/third-party/eigen")
aux_source_directory(. DIR_SRCS)
add_subdirectory(src)
include_directories(/usr/local/cuda/include)
link_directories(/usr/local/cuda/lib64)
add_executable(TranningModel TranningModel.cc)
target_link_libraries(TranningModel MiniDNNLib)
add_executable(cpu_main cpu_main.cc)
target_link_libraries(cpu_main MiniDNNLib)
add_library(gpu_lib STATIC src/gpu/GpuModel.h src/gpu/GpuModel.cu src/gpu/gpuConv.h src/gpu/gpuConv.cc src/gpu/gpuConv_v2.h src/gpu/gpuConv_v2.cc src/gpu/gpuConv_v3.h src/gpu/gpuConv_v3.cc)
set_target_properties(gpu_lib PROPERTIES CUDA_ARCHITECTURES 50)
add_executable(gpu_main gpu_main.cu)
set_target_properties(gpu_main PROPERTIES CUDA_ARCHITECTURES 50)
target_link_libraries(gpu_main MiniDNNLib gpu_lib)